netcdf-derive/tests/failing/enumnorepr.rs
#[derive(netcdf_derive::NcType)]
enum NoRepr {
    A,
    B,
}

fn main() {}
